# jira-report-buddy

./: README.md  bandit.yaml  configure.py  fuzzy_find.py  jira_buddy.py  main.py  organizations.py  pyproject.toml  pyrightconfig.json  sonar-project.properties  test.sh  ytd_report.py
